# Gomoku

./: CMakeLists.txt  README.md  main.cpp  main_single.cpp
Agent/: Agent.hpp  Board.hpp  Const.h
Class/: Const.h
scoretable/: gen.cpp  table.out
src/: board.cpp  board.h  core.cpp  core.h  generator.cpp  generator.h  hash.cpp  hash.h  judger.cpp  judger.h  scorer.cpp  scorer.h  timer.h  tt.cpp  tt.h
